File Upload Ui updated & added novalidate to myaccount

--- a/attendance/templates/classroom/add_students.html
+++ b/attendance/templates/classroom/add_students.html
@@ -12,6 +12,63 @@
 		font-size: 1.1rem;
 		font-family: 'arvo';
 	}
+
+	.file_upload_label {
+		color: #062743;
+		font-size: 1.1rem;
+		font-family: 'arvo';
+		padding-left: 5px;
+		padding-bottom: 5px;
+	}
+
+	/* Customizing Bootstrap - Neumorphism-Ui */
+
+	.file_upload_cust {
+		margin-top: 3px;
+		font-size: 1.1rem;
+		font-family: 'Karla', sans-serif;
+		color: #062743 !important;
+		background-color: #daeaf6 !important;
+		border: 1px solid #c9d7e2;
+		border-radius: 2rem !important;
+		box-shadow: inset 5px 5px 10px #c2d0db,
+			inset -5px -5px 10px #daeaf6;
+	}
+
+	.file_upload_cust:focus {
+		border: 2px solid #c9d7e2;
+		outline: none !important;
+		box-shadow: inset 5px 5px 10px #c2d0db,
+			inset -5px -5px 10px #e5f6ff;
+	}
+
+	.file_upload_cust:hover {
+		box-shadow: inset 5px 5px 10px #c2d0db,
+			inset -5px -5px 10px #e5f6ff;
+	}
+
+	.file_upload_cust:active {
+		outline: none !important;
+	}
+
+	.custom-file-label::after {
+		text-align: center !important;
+		vertical-align: middle !important;
+		color: #007bff !important;
+		background-color: #daeaf6;
+		border: 2px solid #c9d7e2;
+		border-radius: 2rem !important;
+		box-shadow: 5px 5px 10px #c2d0db,
+			-5px -5px 10px #e5f6ff;
+	}
+
+	.invalid_upload {
+		display: block;
+		width: 100%;
+		font-size: 80%;
+		color: #dc3545;
+		padding: 0px 0px 0px 15px;
+	}
 </style>
 {% endblock %}
 
@@ -60,21 +117,30 @@
 	</div>
 </div>
 <!-- Add Student CSV Modal Form -->
-<div class="modal fade" id="add_stud_csv">
+<div class="modal fade" id="add_stud_csv" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-hidden="true">
 	<div class="modal-dialog modal-dialog-centered">
 		<div class="modal-content border_white modal_box_shadow">
-			<form class="edit_form" method="POST" id="add_stud_csv_form" enctype="multipart/form-data" novalidate>
+			<form class="form edit_form needs-validation" method="POST" id="add_stud_csv_form"
+				enctype="multipart/form-data" novalidate>
 				<div class="modal-header ml-1 text_d_blue border_color_white">
-					<h3 class="modal-title">Edit&nbsp;Student&nbsp;Details</h3>
+					<h3 class="modal-title">Upload File</h3>
 					<button type="button" class="close btn-cust pr-4 pt-4" data-dismiss="modal">&times;</button>
 				</div>
 				<div class="modal-body mt-3 pt-0">
 					{% csrf_token %}
 					{% for field in csv_form %}
-					<div class="fieldWrapper">
-						{{ field.label_tag }}
-						{{ field }}
-						{{ field.errors }}
+					<div class="fieldWrapper" id="file_div">
+						<label class="file_upload_label" for="{{ field.id_for_label }}">File Upload</label>
+						<div class="input-group mb-3">
+							<div class="custom-file">
+								{{ field }}
+								<label class="custom-file-label file_upload_cust" for="{{ field.id_for_label }}"
+									aria-describedby="inputGroup">Choose *.csv file</label>
+							</div>
+						</div>
+						{% for error in field.errors %}
+						<strong class="invalid_upload">{{ error|escape }}</strong>
+						{% endfor %}
 					</div>
 					{% endfor %}
 				</div>
@@ -91,5 +157,13 @@
 	</div>
 </div>
 
-
 {% endblock %}
+
+<script type="text/javascript">
+	$(document).ready(function () {
+		{% if csv_form.errors %}
+		$("#add_stud_csv").modal({ backdrop: 'static' });
+		$("#add_stud_csv").modal('show');
+		{% endif %}
+	});
+</script>
