--- a/attendance/static/scss/style.scss
+++ b/attendance/static/scss/style.scss
@@ -1,3 +1,30 @@
+/* Html Scrollbar Hide */
+
+.html::-webkit-scrollbar {  
+    /* Edge,Chrome,Opera */  
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    display: none;
+}
+
+::-webkit-scrollbar {
+    /* Edge,Chrome,Opera, */
+    overflow: scroll;
+    overflow-x: hidden;
+    width: 0px;
+    display: none;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    background: transparent;    
+}
+
+@-moz-document url-prefix() { 
+    html { 
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+    } 
+}
+
 body {
     background-color:#daeaf6;
     font-family: 'Karla', sans-serif !important;    
@@ -444,4 +471,27 @@ body {
 
 .transition_4s{
     transition: all 0.4s;
+}
+
+/* Table */
+
+/* Table Scrollbar Hide */
+
+.table::-webkit-scrollbar {
+    /* Chrome,Edge,Opera,Firefox */
+    width: 0px;
+    background: transparent;
+}
+
+.table_wrapper {
+    /* Chrome,Edge,Opera,Firefox */
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+
+    &::-webkit-scrollbar {
+    /* Chrome,Edge,Opera,Firefox */
+        width: 0px;
+        background: transparent;
+    }
+
 }
