--- a/attendance/templates/base.html
+++ b/attendance/templates/base.html
@@ -43,6 +43,7 @@
 
 <body>
   <header>
+    {% include 'messages.html' %}
     <!-- Navbar (Top) -->
     {% include 'header.html' %}
   </header>
@@ -213,14 +214,12 @@
         <!-- Overlay Effect -->
         <div class="overlay d-md-none" id="overlay"></div>
         <!-- Main Content Area -->
-        <section id="main_content" class="p-0 m-md-2">
+        <section id="main_content" class="p-0 m-md-2" style="overflow-x: auto;">
           {% block content %}
           {% endblock %}
         </section>
       </div>
     </article>
-
-    {% include 'messages.html' %}
   </main>
 
   <footer>
