--- a/attendance/static/scss/style.scss
+++ b/attendance/static/scss/style.scss
@@ -434,6 +434,7 @@ body {
 }
 
 .toast_box_shadow{
+    width: 350px !important;
     border: 1px solid #ffffff;
     background-color: #daeaf6;
     border-radius: 2rem !important;
