--- a/attendance/templates/user_module/my_account.html
+++ b/attendance/templates/user_module/my_account.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="row d-flex justify-content-center align-items-center m-3 m-md-0">
+<div class="row d-flex justify-content-center align-items-center m-3 m-md-0 mb-md-4">
     <div class="container col-lg-8 col-xl-6 body_box_shadow border_white p-4 mx-md-3">
         <div class="text-center text_d_blue arvo my-4 mt-md-0 mb-md-4">
             <h3 class="m-0">Edit&nbsp;Account</h3>
@@ -37,8 +37,12 @@
                 {{ form.email|as_crispy_field }}
             </div>
             <div class="form-group col-md-12">
+                <a href="{% url 'password_reset' %}" type="button"
+                    class="btn border_white btn-cust neu_icon text-primary align-self-center float-left">
+                    Reset&nbsp;Password
+                </a>
                 <button type="submit" form="account_update_form"
-                    class="btn border_white btn-cust neu_icon text-primary align-self-center float-right mr-3">Update</button>
+                    class="btn border_white btn-cust neu_icon text-success align-self-center float-right mr-md-3">Update</button>
             </div>
         </form>
     </div>
