--- a/attendance/templates/timetable/showsubjects.html
+++ b/attendance/templates/timetable/showsubjects.html
@@ -33,6 +33,9 @@
     <a href="{% url 'timetable:set_info' c_object.id s_object.id %}" class="btn btn-danger">Back</a>
     <a href="{% url 'timetable:createtimetable' c_object.id s_object.id %}" class="btn btn-info">Add subjects for this timetable</a>
     <button type="button" class="btn btn-success float-right" id="save-changes">Save changes</button>
+    <button type="button" class="btn btn-danger float-right mr-2" id="cancel-changes">Cancel changes</button>
+    
+    <!--Modal stuff-->
     <div class="modal fade" id="timetable_modal">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -53,7 +56,8 @@
 
     <script>
         $(document).ready(function(){
-            var a,day,hour,subject,save=false;
+            $("#save-changes").prop('disabled',true)
+            var a,subject;
             var subject_list=[];
             $("#cancel_button").click(function(){
                 $("#timetable_modal").modal('hide')
@@ -61,7 +65,8 @@
 
             $("td").click(function(){
                 subject=$(this).text()
-                if(subject!='Free'){
+                if(subject!='----'){
+                    var day,hour;
                     a=$(this).attr('id')
                     day=a[0]
                     hour=a[1]
@@ -75,83 +80,54 @@
             });
 
             $("#add_subject").click(function(){
+                var temp=[];
                 $("#save-changes").prop('disabled',false)
                 subject=$("#id_subject").val()
-                var temp=[day,hour,subject]
-                //:selected selector selects the elements that are pre-selected;so there is no manadatory for the elements with the 'selected' attribute
-                subject=$("#id_subject option:selected").text()
+                if(subject.length==0){
+                    subject='Free'
+                    temp=[subject]
+                }
+                else{
+                    temp=[subject]
+                    //:selected selector selects the elements that are pre-selected;so there is no manadatory for the elements with the 'selected' attribute
+                    subject=$("#id_subject option:selected").text()
+                }
+               
                 $("td").each(function(){
                     var find=$(this).attr('id')
                     if(a==find){
-                        $(this).text(subject)  
+                        $(this).text($(this).text().concat("-->",subject))  
                         var timetable_id=$(this).attr('name')
                         temp.push(timetable_id) 
                     }
                 })
                 subject_list.push(temp)
-                save=true
+                //save=true
                 $("#timetable_modal").modal('hide')
             });
             
             $("#save-changes").click(function(){
-                console.log(subject_list)
-                var url="{% url 'timetable:edit_subjects' s_object.id %}";
                 $.ajax({
                     headers:{
-                        "X-CSRFTOKEN": "{{ csrf_token }}"
+                        "X-CSRFTOKEN": "{{ csrf_token }}",
+                        'contentType' : 'application/json;charset=utf-8',
                     },
-                    url:url,
+                    url:"{% url 'timetable:edit_subjects' %}",
                     type:'post',
-                    data:{
-                        'subject_list[]':subject_list
-                    },
+                    data: JSON.stringify({'subject_list':subject_list}),
                     success:function(response){
                         if(response=="saved"){
                             $("#save-changes").prop('disabled',true)
+                            location.reload()
                         }
                     }
                 });
             });
 
+            $("#cancel-changes").click(function(){
+                location.reload()
+            });
          
         });
     </script>
 {% endblock %}
-
-<!--    var subject_creation_array=[]
-            for(i=0;i<7;i++){
-                inner_subject_creation_array=[]
-                for(j=0;j<6;j++){
-                    inner_subject_creation_array.push([i,j,0])
-                }
-                subject_creation_array.push(inner_subject_creation_array)
-            }
-            $("td").click(function(){
-                var stored_check=$(this).find('#subject_id').text()
-                if(stored_check.length>0){
-                    alert("Subject is already added for the clicked hour \n\n You can't edit the timetable entry instead you have to create a new set and add the subject there")
-                }
-                else{
-                    var current_id=$(this).attr('id')
-                    console.log(current_id)
-                    var day=current_id[0]
-                    var hour=current_id[1]
-                    $("#id_day").val(day)
-                    //Here day and hour id's are strings but the options are integers.Here implicit type conversion is performed to convert string to integer
-                    $("#id_hour").val(hour)
-                    $("#id_day,#id_hour,#id_set_name").prop('disabled',true);
-                    $("#timetable_modal").modal({backdrop:"static"})
-                    $("#add_subject").on('click',function(){
-                    console.log(current_id)
-                     //current_id='#'.concat(current_id)
-                    subject_creation_array[day][hour][2]=$("#id_subject").val()
-                    $('#'.concat(current_id)).text($("#id_subject option:selected").text())
-                    console.table(subject_creation_array)
-                    })
-                }
-            });
-    
-    var subject=$(this).find('#subject_id').text()
-                   //subject id returned by {{j.subject.id}}
-                   $("#id_subject").val(subject)-->
-    
