--- a/attendance/templates/timetable/timetable.html
+++ b/attendance/templates/timetable/timetable.html
@@ -75,8 +75,7 @@
      <div class="row">
           <div class="col-8">
                <input type="submit" class="btn btn-success float-right" value="Save and continue">
-               <a href="{% url 'timetable:set_info' c_object.id set_id %}" class="btn btn-danger">Back</a>
-               <a href="{% url 'timetable:showsubjects' c_object.id set_id %}" class="btn btn-info">View Timetable</a>
+               <a href="{% url 'timetable:showsubjects' c_object.id set_id %}" class="btn btn-danger">Back to Timetable</a>
           </div>
      </div>
 </form>
