UI for View Timetable Page
Changes:
 self.classroom set object to self.name
 removed style in base.html (main_content) // instead of using in base.html, we can use it in particular page

--- a/attendance/templates/base.html
+++ b/attendance/templates/base.html
@@ -214,7 +214,7 @@
         <!-- Overlay Effect -->
         <div class="overlay d-md-none" id="overlay"></div>
         <!-- Main Content Area -->
-        <section id="main_content" class="p-0 m-md-2" style="overflow-x: auto;">
+        <section id="main_content" class="p-0 m-md-2">
           {% block content %}
           {% endblock %}
         </section>
