--- a/attendance/templates/timetable/showsubjects1.html
+++ b/attendance/templates/timetable/showsubjects1.html
@@ -1,25 +1,58 @@
-    <h4>This timetable is just for viewing purpose</h4>
-    <table class="table table-bordered">
+{% block head %}
+<style>
+    /* Custom CSS */
+    #view_table .table td {
+        border: 0;
+    }
+
+    #view_table .table th {
+        border: 0;
+    }
+
+    .bbr {
+        border-bottom: 1px solid #ffffff !important;
+        border-right: 1px solid #ffffff !important;
+    }
+
+    .br {
+        border-right: 1px solid #ffffff !important;
+    }
+
+    .bb {
+        border-bottom: 1px solid #ffffff !important;
+    }
+
+    #main_content {
+        overflow-x: auto;
+    }
+</style>
+{% endblock %}
+
+<div class="table-responsive table_wrapper table_box_shadow border_white" id="view_table">
+    <table class="table my-1 my-md-2">
         <thead>
-            <tr>
-                <th>Days/Hour</td>
-                <th>I</td>
-                <th>II</td>
-                <th>III</td>
-                <th>IV</td>
-                <th>V</td>
+            <tr class="text-center text_d_blue">
+                <th scope="col" class="upper_case bbr">Days/Hour</td>
+                <th scope="col" class="bb">I</td>
+                <th scope="col" class="bb">II</td>
+                <th scope="col" class="bb">III</td>
+                <th scope="col" class="bb">IV</td>
+                <th scope="col" class="bb">V</td>
             </tr>
         </thead>
         <tbody>
-            {% for i,days in all_subjects %}
-            <tr>
-                <th>{{days}}</th>
-                {% for j in i %}
-                    <td id="{{forloop.parentloop.counter}}{{forloop.counter}}" name="{{j.id}}">{{j}}</td>
+            {% for subjects, days in all_subjects %}
+            <tr scope="row" class="text-center text_d_blue">
+                <th class="br">{{days}}</th>
+                {% for subject in subjects %}
+                <td id="{{forloop.parentloop.counter}}{{forloop.counter}}" name="{{subject.id}}">{{subject|title}}</td>
                 {% endfor %}
             </tr>
             {% endfor %}
         </tbody>
     </table>
-    <h5>This timetable is valid from{{s_object.from_date}} to {{s_object.to_date}}</h5>
-    <a href="{% url 'timetable:showsubjects' c_object.id s_object.id %}" class="btn btn-info">Click here to add/edit timetable</a>
+</div>
+<div class="d-flex justify-content-center justify-content-md-start">
+    <a href="{% url 'timetable:showsubjects' c_object.id s_object.id %}"
+        class="btn border_white btn-cust neu_icon text-info align-self-center my-3">Manage Timetable</a>
+</div>
