--- a/attendance/templates/timetable/showsubjects.html
+++ b/attendance/templates/timetable/showsubjects.html
@@ -3,136 +3,219 @@
 {% load crispy_forms_tags %}
 
 {% block title %}
-    <title>SAMS</title>
+<title>SAMS | Manage Timetable</title>
 {% endblock %}
-    
+
+{% block head %}
+<style>
+    /* Custom CSS */
+    #view_table .table td {
+        border: 0;
+    }
+
+    #view_table .table th {
+        border: 0;
+    }
+
+    .bbr {
+        border-bottom: 1px solid #ffffff !important;
+        border-right: 1px solid #ffffff !important;
+    }
+
+    .br {
+        border-right: 1px solid #ffffff !important;
+    }
+
+    .bb {
+        border-bottom: 1px solid #ffffff !important;
+    }
+
+    #main_content {
+        overflow-x: auto;
+    }
+</style>
+{% endblock %}
+
 {% block content %}
-    <table class="table table-bordered">
-        <thead>
-            <tr>
-                <th>Days/Hour</td>
-                <th>I</td>
-                <th>II</td>
-                <th>III</td>
-                <th>IV</td>
-                <th>V</td>
-            </tr>
-        </thead>
-        <tbody>
-            {% for i,days in all_subjects %}
-            <tr>
-                <th>{{days}}</th>
-                {% for j in i %}
-                    <td id="{{forloop.parentloop.counter}}{{forloop.counter}}" name="{{j.id}}">{{j}}</td>
+<section class="text-center text_d_blue arvo mt-3 mb-3 mt-md-0" style="margin-bottom: 35px;">
+    <h1>Manage Timetable</h1>
+</section>
+<section class="pl-md-4 d-flex flex-column flex-md-row pt-md-2">
+    <h5 class="text-muted d-none d-md-flex justify-content-center justify-content-md-start">
+        Classroom&nbsp;:
+    </h5>
+    <h5 class="ml-2 capitalize text-muted text-muted d-flex justify-content-center justify-content-md-start">
+        {{ c_object }}
+    </h5>
+    <h5 class="ml-2 text-muted text-muted d-flex justify-content-center justify-content-md-start">
+        [&nbsp;{{ s_object.from_date }}&nbsp;to
+    </h5>
+    <h5 class="ml-2 text-muted text-muted d-flex justify-content-center justify-content-md-start">
+        {{ s_object.to_date }}&nbsp;]
+    </h5>
+</section>
+{% if is_empty %}
+<section class="d-flex justify-content-center justify-content-md-end">
+    <a href="{% url 'timetable:createtimetable' c_object.id s_object.id %}"
+        class="btn border_white btn-cust neu_icon text-info align-self-center mx-5">Fill&nbsp;Subjects</a>
+</section>
+{% endif %}
+<section class="container my-3">
+    <div class="table-responsive table_wrapper table_box_shadow border_white" id="view_table">
+        <table class="table my-1 my-md-2">
+            <thead>
+                <tr class="text-center text_d_blue">
+                    <th scope="col" class="upper_case bbr">Days/Hour</td>
+                    <th scope="col" class="bb">I</td>
+                    <th scope="col" class="bb">II</td>
+                    <th scope="col" class="bb">III</td>
+                    <th scope="col" class="bb">IV</td>
+                    <th scope="col" class="bb">V</td>
+                </tr>
+            </thead>
+            <tbody>
+                {% for subjects,days in all_subjects %}
+                <tr scope="row" class="text-center text_d_blue">
+                    <th class="br">{{days}}</th>
+                    {% for subject in subjects %}
+                    <td id="{{forloop.parentloop.counter}}{{forloop.counter}}" name="{{subject.id}}"
+                        data-hour="{{subject.get_hour_display}}" data-day="{{subject.get_day_display}}">{{subject}}</td>
+                    {% endfor %}
+                </tr>
                 {% endfor %}
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    <h5>This timetable is valid from{{s_object.from_date}} to {{s_object.to_date}}</h5>
-    <a href="{% url 'timetable:setchoose' c_object.id %}" class="btn btn-danger">Back to Set choose</a>
-    <a href="{% url 'timetable:createtimetable' c_object.id s_object.id %}" class="btn btn-info">Add subjects for this timetable</a>
-    <button type="button" class="btn btn-success float-right" id="save-changes">Save changes</button>
-    <button type="button" class="btn btn-danger float-right mr-2" id="cancel-changes">Cancel changes</button>
-    
-    <!--Modal stuff-->
-    <div class="modal fade" id="timetable_modal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4>Change the subject for the particular hour</h4>
-                </div>
-                <div class="modal-body">
-                    <form method="POST" id="create_timetable_form">
-                        {% csrf_token %}
-                        {{edit_timetable.as_p}}
-                        <button type="button" class="btn btn-info" id="add_subject">Add subject</button>
-                        <button type="reset" class="btn btn-secondary" id="cancel_button">Cancel</button>
-                    </form>
+            </tbody>
+        </table>
+    </div>
+</section>
+
+<section class="m-3">
+    <a href="{% url 'timetable:setchoose' c_object.id %}"
+        class="btn border_white btn-cust neu_icon text-primary align-self-center ml-2">Back</a>
+    <button type="button" class="btn border_white btn-cust neu_icon text-success align-self-center float-right mr-3"
+        id="save-changes">Save changes</button>
+    <button type="button" class="btn border_white btn-cust neu_icon text-danger align-self-center float-right mr-2"
+        id="cancel-changes">Cancel changes</button>
+</section>
+
+<!--Modal stuff-->
+<div class="modal fade" id="timetable_modal" data-backdrop="static" data-keyboard="false" tabindex="-1"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content border_white modal_box_shadow">
+            <div class="modal-header ml-1 text_d_blue border_color_white">
+                <h3 class="modal-title capitalize">Change&nbsp;subject&nbsp;hour</h3>
+                <button type="button" class="close btn-cust pr-4 pt-4" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <form method="POST" id="create_timetable_form">
+                    {% csrf_token %}
+                    <p id="daaa"></p>
+                    <div class="form-row">
+                        <div class="form-group col-md-12 pr-md-2">
+                            <label class="requiredField" id="value-day"></label>
+                        </div>
+                        <div class="form-group col-md-12 pr-md-2">
+                            <label class="requiredField" id="value-hour"></label>
+                        </div>
+                        <div class="form-group col-md-12 pr-md-2">
+                            {{ edit_timetable.subject|as_crispy_field }}
+                        </div>
+                    </div>
+                    <!-- <button type="button" class="btn btn-info" id="add_subject">Add subject</button>
+                    <button type="reset" class="btn btn-secondary" id="cancel_button">Cancel</button> -->
+                </form>
+            </div>
+            <div class="modal-footer border_color_white">
+                <div class="col-12 d-flex justify-content-end">
+                    <button type="button" class="btn border_white btn-cust neu_icon text-success align-self-center mr-2"
+                        id="add_subject">Change</button>
+                    <button type="reset" class="btn border_white btn-cust neu_icon text-warning align-self-center ml-2"
+                        data-dismiss="modal" id="cancel_button">Cancel</button>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
-    <script>
-        $(document).ready(function(){
-            $("#save-changes").prop('disabled',true)
-            $("#cancel-changes").prop('disabled',true)
-            var a,subject;
-            var subject_list=[];
-            $("#cancel_button").click(function(){
-                $("#timetable_modal").modal('hide')
-            });
+<script>
+    $(document).ready(function () {
+        $("#save-changes").prop('disabled', true)
+        $("#cancel-changes").prop('disabled', true)
+        var a, subject;
+        var subject_list = [];
 
-            $("td").click(function(){
-                subject=$(this).text()
-                if(subject!='----'){
-                    var day,hour;
-                    a=$(this).attr('id')
-                    day=a[0]
-                    hour=a[1]
-                    $("#id_day").val(day)
-                    $("#id_hour").val(hour)
-                    $("#id_day,#id_hour,#id_set_name").attr('disabled',true)
-                    //prop method is the best for setting the selected kind of elements
-                    $("#id_subject option:contains("+subject+")").prop('selected',true)
-                    $("#timetable_modal").modal('show')
-                }
-            });
-
-            $("#add_subject").click(function(){
-                var subject_chosen_text=$("#id_subject option:selected").text()
-                if(subject==subject_chosen_text){
-                    alert("Can't edit this period in the particular day particular hour")
-                }
-                else{
-                    var temp=[],subject_chosen;
-                    $("#save-changes").prop('disabled',false)
-                    $("#cancel-changes").prop('disabled',false)
-                    subject_chosen=$("#id_subject").val()
-                    if(subject_chosen.length==0){
-                        subject_chosen='Free'
-                        temp=[subject_chosen]
-                    }
-                    else{
-                        temp=[subject_chosen]
-                        //:selected selector selects the elements that are pre-selected;so there is no manadatory for the elements with the 'selected' attribute
-                    }
-               
-                    $("td").each(function(){
-                        var find=$(this).attr('id')
-                        if(a==find){
-                            $(this).text($(this).text().concat("-->",subject_chosen_text))  
-                            var timetable_id=$(this).attr('name')
-                            temp.push(timetable_id) 
-                        }
-                    })
-                    subject_list.push(temp)
-                    $("#timetable_modal").modal('hide')
-                }
-            });
-            
-            $("#save-changes").click(function(){
-                $.ajax({
-                    headers:{
-                        "X-CSRFTOKEN": "{{ csrf_token }}",
-                        'contentType' : 'application/json;charset=utf-8',
-                    },
-                    url:"{% url 'timetable:edit_subjects' %}",
-                    type:'post',
-                    data: JSON.stringify({'subject_list':subject_list}),
-                    success:function(response){
-                        if(response=="saved"){
-                            location.reload()
-                        }
-                    }
-                });
-            });
-
-            $("#cancel-changes").click(function(){
-                location.reload()
-            });
-         
+        $("td").click(function () {
+            subject = $(this).text()
+            timetable_subject_id = $(this).attr('name')
+            if (subject != '-') {
+                // var day, hour;
+                a = $(this).attr('id')
+                // day = a[0]
+                // hour = a[1]
+                // $("#id_day").val(day)
+                // $("#id_hour").val(hour)
+                $("#value-day").text("Day : " + $(this).attr('data-day'))
+                $("#value-hour").text("Hour : " + $(this).attr('data-hour'))
+                // $("#id_day,#id_hour,#id_set_name").attr('disabled', true)
+                //prop method is the best for setting the selected kind of elements
+                $("#id_subject option:contains(" + subject + ")").prop('selected', true)
+                $("#timetable_modal").modal('show')
+            }
         });
-    </script>
+
+        $("#add_subject").click(function () {
+            var subject_chosen_text = $("#id_subject option:selected").text()
+            if (subject == subject_chosen_text) {
+                alert("Can't edit this period in the particular day particular hour")
+            }
+            else {
+                var temp = [], subject_chosen;
+                $("#save-changes").prop('disabled', false)
+                $("#cancel-changes").prop('disabled', false)
+                subject_chosen = $("#id_subject").val()
+                if (subject_chosen.length == 0) {
+                    subject_chosen = 'Free'
+                    temp = [subject_chosen]
+                }
+                else {
+                    temp = [subject_chosen]
+                    //:selected selector selects the elements that are pre-selected;so there is no manadatory for the elements with the 'selected' attribute
+                }
+
+                $("td").each(function () {
+                    var find = $(this).attr('id')
+                    if (a == find) {
+                        $(this).text($(this).text().concat("-->", subject_chosen_text))
+                        var timetable_id = $(this).attr('name')
+                        temp.push(timetable_id)
+                    }
+                })
+                subject_list.push(temp)
+                $("#timetable_modal").modal('hide')
+            }
+        });
+
+        $("#save-changes").click(function () {
+            $.ajax({
+                headers: {
+                    "X-CSRFTOKEN": "{{ csrf_token }}",
+                    'contentType': 'application/json;charset=utf-8',
+                },
+                url: "{% url 'timetable:edit_subjects' %}",
+                type: 'post',
+                data: JSON.stringify({ 'subject_list': subject_list }),
+                success: function (response) {
+                    if (response == "saved") {
+                        location.reload()
+                    }
+                }
+            });
+        });
+
+        $("#cancel-changes").click(function () {
+            location.reload()
+        });
+
+    });
+</script>
 {% endblock %}
