--- a/attendance/templates/timetable/timetable.html
+++ b/attendance/templates/timetable/timetable.html
@@ -3,88 +3,55 @@
 {% load crispy_forms_tags %}
 
 {% block title %}
-    <title>SAMS</title>
+<title>SAMS | Create Timetable</title>
 {% endblock %}
 
 {% block content %}
-<h5>You are in the classroom : <a href="{% url 'classroom:editclass' c_object.id %}">{{c_object}}</a> </h5>
-{% if No_subject %}
-    <h6>No subjects created yet for this classroom</h6>
-{% endif %}
-<form method="POST" action="{% url 'timetable:createtimetable' c_object.id set_id %}">
-     {% csrf_token %}
-     <div class="row mb-4">
-          <div class="col-2 offset-2">
-               <label for="set_name" class="float-right">Set name :</label>
-           </div>
-           <div class="col-5">
-                {{t.set_name}}
-           </div>
+<section class="container px-md-4 body_box_shadow border_white mx-md-3">
+     <div class="text-center text_d_blue arvo my-4">
+          <h3 class="m-0">Create&nbsp;Timetable Form</h3>
      </div>
-     <div class="row mb-5">
-          <div class="col-2 offset-2">
-                 <label for="day" class="float-right">Day :</label>
+     <form class="form needs-validation" action="{% url 'timetable:createtimetable' c_object.id set_id %}" method="POST"
+          novalidate>
+          {% csrf_token %}
+          <div class="form-row">
+               <div class="form-group col-md-6 pr-md-2">
+                    {{ form.set_name|as_crispy_field }}
+               </div>
+               <div class="form-group col-md-6 pl-md-2">
+                    {{ form.day|as_crispy_field }}
+               </div>
+               <div class="form-group col-md-6 pr-md-2">
+                    {{ form.s1|as_crispy_field }}
+               </div>
+               <div class="form-group col-md-6 pl-md-2">
+                    {{ form.s2|as_crispy_field }}
+               </div>
+               <div class="form-group col-md-6 pr-md-2">
+                    {{ form.s3|as_crispy_field }}
+               </div>
+               <div class="form-group col-md-6 pl-md-2">
+                    {{ form.s4|as_crispy_field }}
+               </div>
+               <div class="form-group col-md-6 pr-md-2">
+                    {{ form.s5|as_crispy_field }}
+               </div>
+               <div
+                    class="form-group col-12 d-flex flex-column flex-md-row justify-content-center justify-content-md-end">
+                    <input type="submit" class="btn border_white btn-cust neu_icon text-success align-self-center mr-2"
+                         value="Save & Continue">
+                    <a href="{% url 'timetable:showsubjects' c_object.id set_id %}"
+                         class="btn border_white btn-cust neu_icon text-primary align-self-center mt-2 mt-md-0">Back to
+                         Timetable</a>
+               </div>
           </div>
-          <div class="col-5">
-                 {{t.day}}
-          </div>
-     </div>
-     <div class="row mb-2">
-          <div class="col-2 offset-2">
-                 <label for="s1" class="float-right">Hour I :</label>
-          </div>
-          <div class="col-4">
-                 {{t.s1}}
-          </div>
-     </div>
-     <div class="row mb-2">
-          <div class="col-2 offset-2">
-               <label for="s2" class="float-right">Hour II :</label>
-          </div>
-          <div class="col-4">
-               {{t.s2}}
-          </div>
-     </div>
-        
-     <div class="row mb-2">
-          <div class="col-2 offset-2">
-               <label for="s2" class="float-right">Hour III :</label>
-          </div>
-          <div class="col-4">
-               {{t.s3}}
-          </div>
-     </div>
-
-     <div class="row mb-2">
-          <div class="col-2 offset-2">
-               <label for="s4" class="float-right">Hour IV :</label>
-          </div>
-          <div class="col-4">
-               {{t.s4}}
-          </div>
-     </div>
-
-     <div class="row mb-3">
-          <div class="col-2 offset-2">
-               <label for="s5" class="float-right">Hour V :</label>
-          </div>
-          <div class="col-4">
-               {{t.s5}}
-          </div>
-     </div>
-     <div class="row">
-          <div class="col-8">
-               <input type="submit" class="btn btn-success float-right" value="Save and continue">
-               <a href="{% url 'timetable:showsubjects' c_object.id set_id %}" class="btn btn-danger">Back to Timetable</a>
-          </div>
-     </div>
-</form>
-
+     </form>
+</section>
 <script>
-     $(document).ready(function(){
-          $("#set_name").prop('disabled',true);
-          $("form").on('submit',function(){
-               $("#set_name").prop('disabled',false);
+     $(document).ready(function () {
+          $("#set_name").prop('disabled', true);
+          $("form").on('submit', function () {
+               $("#set_name").prop('disabled', false);
           });
      })
 </script>
